--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-    <title>Hello, World!</title>
+    <title>index</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
-    <h1 class="title">Hello World! </h1>
+    <h1 class="title">Tralalero tralala</h1>
     <p id="currentTime"></p>
     <script src="script.js"></script>
 </body>
