--- a/index.html
+++ b/index.html
@@ -9,13 +9,34 @@
 </head>
 
 <body>
-    <div class="roulette-container">
-        <svg id="roulette" width="400" height="400" viewBox="0 0 400 400">
-            <g id="wheel"></g>
-            <circle id="ball" r="8" fill="white" cx="200" cy="30" />
-        </svg>
-        <button onclick="spinBall()">Spin</button>
-        <p id="result"></p>
+    <div class="container">
+        <div class="roulette-container">
+            <svg id="roulette" width="400" height="400" viewBox="0 0 400 400">
+                <g id="wheel"></g>
+                <circle id="ball" r="8" fill="white" cx="200" cy="30" />
+            </svg>
+            <button onclick="spinBall()">Spin</button>
+            <p id="result"></p>
+            <div id="message"></div>
+        </div>
+
+        <div class="betting-container">
+            <h3>Place Your Bet</h3>
+            <div class="betting-table">
+                <label for="bet-number">Bet on Number (0-36):</label>
+                <input type="number" id="bet-number" min="0" max="36" />
+                <button onclick="placeBet()">Place Bet</button>
+            </div>
+            <div class="betting-options">
+                <label for="bet-color">Bet on Color:</label>
+                <select id="bet-color">
+                    <option value="red">Red</option>
+                    <option value="black">Black</option>
+                    <option value="green">Green</option>
+                </select>
+                <button onclick="placeColorBet()">Place Color Bet</button>
+            </div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
