--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
                                 <circle cx="250" cy="250" r="240" fill="url(#wheelGradient)" filter="url(#shadow)"/>
                                 <g id="wheel"></g>
                                 <circle cx="250" cy="250" r="25" fill="#FFD700" stroke="#B8860B" stroke-width="2"/>
-                                <circle cx="250" cy="40" r="10" fill="#FFFFFF" filter="url(#shadow)"/>
+                                <g id="ballGroup" style="transform-origin: 250px 250px;">
+<circle id="ball" cx="250" cy="40" r="10" fill="#FFFFFF" filter="url(#shadow)"/>
+</g>
                             </svg>
                             <div class="wheel-center">
                                 <svg class="crown-icon" viewBox="0 0 24 24" fill="currentColor">
