--- a/index.html
+++ b/index.html
@@ -117,9 +117,7 @@
                                 <circle cx="250" cy="250" r="240" fill="url(#wheelGradient)" filter="url(#shadow)"/>
                                 <g id="wheel"></g>
                                 <circle cx="250" cy="250" r="25" fill="#FFD700" stroke="#B8860B" stroke-width="2"/>
-                                <g id="ballGroup" style="transform-origin: 250px 250px;">
-<circle id="ball" cx="250" cy="40" r="10" fill="#FFFFFF" filter="url(#shadow)"/>
-</g>
+                                <circle cx="250" cy="40" r="10" fill="#FFFFFF" filter="url(#shadow)"/>
                             </svg>
                             <div class="wheel-center">
                                 <svg class="crown-icon" viewBox="0 0 24 24" fill="currentColor">
@@ -324,7 +322,7 @@
                             <svg class="contact-icon" viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/>
                             </svg>
-                            +1 (555) 123-4567
+                            +385 91 797 3174
                         </p>
                         <p>
                             <svg class="contact-icon" viewBox="0 0 24 24" fill="currentColor">
